<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_4"
        style="@style/Operations.Center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/value_4"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_4" />

    <TextView
        android:id="@+id/tv_5"
        style="@style/Operations.Center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/value_5"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_4" />


    <TextView
        android:id="@+id/tv_6"
        style="@style/Operations.Center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/value_9"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_4" />

    <TextView
        android:id="@+id/tv_plus"
        style="@style/Operations.TopAndEndText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/value_plus"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16" />

</merge>