<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_0"
        style="@style/Operations.Center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.1"
        android:text="@string/value_0"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_4" />

    <TextView
        android:id="@+id/tv_point"
        style="@style/Operations.Center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/value_point"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_4" />

    <TextView
        android:id="@+id/tv_equals"
        style="@style/Operations.Equals"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/value_equals"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"/>

</merge>